# cassio

./: .gitignore  CHANGES.txt  Makefile  README.md  TEMPLATE.testing.env  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py
.github/: dependabot.yml
.github/workflows/: astradb.yml  cassandra.yml  lint.yml  main.yml  unit.yml
src/cassio/: __init__.py
src/cassio/config/: __init__.py  bundle_download.py  bundle_management.py
src/cassio/cql/: __init__.py
src/cassio/db_extractor/: __init__.py  cassandra_extractor.py
src/cassio/db_reader/: __init__.py  multi_table_cassandra_reader.py
src/cassio/globals/: globals.py
src/cassio/history/: __init__.py  history_management.py  stored_blob_history.py
src/cassio/inspection/: schema.py
src/cassio/keyvalue/: __init__.py  k_v_cache.py  kv_cache.py
src/cassio/table/: __init__.py  base_table.py  cql.py  mixins.py  query.py  range_operator.py  table_types.py  tables.py  utils.py
src/cassio/table/mixins/: __init__.py  base_table.py  clustered.py  elastic_key.py  metadata.py  type_normalizer.py  vector.py
src/cassio/utils/: __init__.py
src/cassio/utils/db_inspection/: __init__.py
src/cassio/utils/vector/: __init__.py  distance_metrics.py
src/cassio/vector/: __init__.py  vector_db_driver.py  vector_table.py
tests/: conftest.py  test_example.py
tests/integration/: test_bundle_conversions.py  test_cassandra_extractor.py  test_init_astra.py  test_init_cassandra.py  test_multi_table_cassandra_reader.py  test_tableclasses_clusteredcassandratable.py  test_tableclasses_clusteredmetadatacassandratable.py  test_tableclasses_clusteredmetadatavectorcassandratable.py  test_tableclasses_elasticcassandratable.py  test_tableclasses_metadatacassandratable.py  test_tableclasses_metadatavectorcassandratable.py  test_tableclasses_plaincassandratable.py  test_tableclasses_vectorcassandratable.py  test_vector_db_table.py  test_vector_table.py
tests/unit/: test_cql_generation.py  test_experimental_vector_search_flag.py  test_imports.py  test_metadata_policy_normalization.py  test_metadata_string_coercion.py  test_multicolumn_primarykey.py  test_query_predicates.py  test_tableclasses_cql_generation.py
